--- a/app/src/main/res/layout/fragment_overview_workshop_details.xml
+++ b/app/src/main/res/layout/fragment_overview_workshop_details.xml
@@ -13,7 +13,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_margin="10dp"
@@ -116,6 +116,7 @@
             android:layout_height="match_parent"
             android:gravity="top"
             android:layout_margin="10dp"
+            android:padding="10dp"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
